# serializer version: 1
# name: test_prompts_are_stable
  '''
  
  Extract a knowledge graph using only the controlled vocabularies below.
  
  Entity types (26):
  Author, Benchmark, Claim, CodeArtifact, Concept, Dataset, Decision, Definition, Equation, Experiment, Function, Gotcha, Hyperparameter, Hypothesis, Lemma, Method, Metric, Model, Module, Paper, Pattern, Project, Proof, Result, Theorem, Tool
  
  Relation types (19):
  authored_by, avoids, because, cites, contradicts, depends_on, derived_from, evaluates_on, extends, fixes, implements, improves_over, part_of, proves, refutes, related_to, reproduces, supersedes, uses
  
  Rules.
  Use only the entity types and relation types listed above, never invent new ones.
  Every fact is a subject entity, a relation type as the predicate, and an object entity.
  Write each entity name in its canonical singular form, lowercase unless a proper noun.
  Write a one-sentence statement for each fact that stands on its own.
  Drop any candidate fact whose predicate is not in the relation list.
  
  '''
# ---
# name: test_prompts_are_stable.1
  '''
  
  Extract a knowledge graph using only the controlled vocabularies below.
  
  Entity types (26):
  Author, Benchmark, Claim, CodeArtifact, Concept, Dataset, Decision, Definition, Equation, Experiment, Function, Gotcha, Hyperparameter, Hypothesis, Lemma, Method, Metric, Model, Module, Paper, Pattern, Project, Proof, Result, Theorem, Tool
  
  Relation types (19):
  authored_by, avoids, because, cites, contradicts, depends_on, derived_from, evaluates_on, extends, fixes, implements, improves_over, part_of, proves, refutes, related_to, reproduces, supersedes, uses
  
  Rules.
  Use only the entity types and relation types listed above, never invent new ones.
  Every fact is a subject entity, a relation type as the predicate, and an object entity.
  Write each entity name in its canonical singular form, lowercase unless a proper noun.
  Write a one-sentence statement for each fact that stands on its own.
  Drop any candidate fact whose predicate is not in the relation list.
  
  Extract only the entities and facts the document text actually asserts. Never describe this
  prompt, the ontology, the extraction task, or the json format as if they were content.
  Write every entity name as a plain human-readable noun phrase, never a slug, file name,
  kebab-case token, or code identifier, so team-memory-spine becomes team memory spine.
  Choose the single entity type that most precisely fits the thing, and when nothing fits
  use Concept rather than forcing an unrelated type. Each fact must read true as subject
  predicate object, and its statement must stand on its own without the surrounding text.
  
  Example.
  Text: "The team-memory-spine project uses Graphiti for bi-temporal storage, building on the
  work of the Zep authors."
  Entities: team memory spine (Project), Graphiti (Tool), Zep (Paper).
  Facts: team memory spine uses Graphiti; Graphiti extends Zep.
  '''
# ---
